--- a/Curso-Vue3/index.html
+++ b/Curso-Vue3/index.html
@@ -11,44 +11,21 @@
 
 <body>
     <div id="app">
-        <div class="product-display">
-            <div class="product-container">
-                <div class="product-image">
-                    <img :src="img" alt="">
-                </div>
-                <div class="product-info">
-                    <h1>{{ title }}</h1>
-                    <p v-if="stock > 10">In stock</p>
-                    <p v-else-if="stock < 10 && stock > 1">Last 10 products</p>
-                    <p v-else>Out stock</p>
-                    <ul>
-                        <li v-for="detail in details">
-                            {{detail}}
-                        </li>
-                    </ul>
-                    <div v-for="variant in variants" :key="variant.id">
-                        {{variant.color}}
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        <cart-display :cart="cart"></cart-display>
+        
+        <product-display @add-to-cart="addToCart"/>
+
+
     </div>
 
-    <script>
-        const { createApp, ref } = Vue
+    <script src="./main.js"></script>
 
-        createApp({
-            setup() {
-                return {
-                    title: ref("T-shirt"),
-                    img: ref("./assets/images/t-shirt-blue.png"),
-                    stock: ref(11),
-                    details: ['Poliester', 'Beateful', 'more informations'],
-                    variants: [{id: 1, color:'blue'}, {id: 2, color:'green'}]
-                }
-            }
-        }).mount('#app')
-    </script>
+    <script src="./Components/Product.js"></script>
+
+    <script src="./Components/Cart.js"></script>
+
+    <script>app.mount('#app')</script>
 
 </body>
 
